# ai-consensus-cli

./: .gitignore  .tick.json  AGENTS.md  CLAUDE.md  PROCESS.md  README.md  pyproject.toml  spec.md
.claude/commands/: feedback.md  spec.md
claude/: skills.md
config/: config.toml
docs/: README.md  architecture.md  cli.md  configuration.md  consensus.md  data-models.md  errors.md  feedback-process.md  glossary.md  logging.md  overview.md  prompts.md  protocol.md  providers.md  roadmap.md  runtime.md  security.md  testing.md
feedback/: FEEDBACK_CLAUDE.md  FEEDBACK_GPT.md
gpt/: init.md  notes.md  rules.md
src/aicx/: __init__.py  __main__.py  assistant.py  config.py  logging.py  output.py  setup.py  types.py  user_config.py
src/aicx/consensus/: __init__.py  collection.py  digest.py  errors.py  runner.py  stop.py
src/aicx/context/: __init__.py  budget.py  tokens.py  truncation.py
src/aicx/models/: __init__.py  anthropic.py  errors.py  factory.py  gemini.py  mock.py  openai.py  registry.py
src/aicx/prompts/: parsing.py  templates.py
src/aicx/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  registry.py
src/aicx/retry/: __init__.py  classifier.py  executor.py  wrapper.py
tests/: __init__.py  test_anthropic.py  test_assistant.py  test_cli.py  test_config.py  test_context.py  test_digest.py  test_gemini.py  test_integration.py  test_logging.py  test_mock.py  test_openai.py  test_output.py  test_parsing.py  test_providers.py  test_quorum.py  test_retry.py  test_runner.py  test_stop.py  test_user_config.py
