[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicx"
version = "1.1.0"
description = "CLI tool for multi-model AI consensus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Consensus CLI Contributors" }
]
keywords = ["ai", "consensus", "cli", "llm", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0,<2.0",
    "anthropic>=0.18,<1.0",
    "google-genai>=1.0,<2.0",
    "httpx>=0.25,<1.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.0,<2.0",
]

[project.scripts]
aicx = "aicx.__main__:main"

[project.urls]
Homepage = "https://github.com/example/ai-consensus-cli"
Repository = "https://github.com/example/ai-consensus-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/aicx"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
