[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicx"
version = "2.0.0"
description = "Simple CLI tool for querying AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Query Tool Contributors" }
]
keywords = ["ai", "cli", "llm", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0,<2.0",
    "anthropic>=0.18,<1.0",
    "google-genai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.0,<2.0",
]

[project.scripts]
aicx = "aicx.__main__:main"

[project.urls]
Homepage = "https://github.com/example/ai-query-tool"
Repository = "https://github.com/example/ai-query-tool"

[tool.hatch.build.targets.wheel]
packages = ["src/aicx"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
